fixed news slider items size on mobile view

--- a/divi-child/src/scss/_wink-horizontal-news-slider.scss
+++ b/divi-child/src/scss/_wink-horizontal-news-slider.scss
@@ -53,13 +53,17 @@
           border-bottom: 0;
           @include diviBreakpoint(980) {
             margin-bottom: 0;
+            height: 195px;
+            width: 347px;
           }
+
           .post-media {
             background-position: 0 35%;
-            text-align: center;
             @include diviBreakpoint(980) {
-              height: 195px;
+              background-position: 0 100%;
             }
+            text-align: center;
+
             a {
               border: 0;
               font-family: $wink-SwitzerRegular;
